feat: webpack 추가

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,7 +19,7 @@
 
         const test = async () => {
 
-            const res = await axios.get("http://localhost:8000/products")
+            const res = await axios.get("/products")
 
             console.log(res)
         }
